* Add smd_7500 driver to support the way MSM7501A handles channels 0 and 1  * Enable M2A IRQs 1-4 (and allow wake)  * Add Kconfig MSM_SMD_7500 option to enable it

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -265,6 +265,14 @@ config MSM_SMD
 	  used to communicate with various services on the baseband
 	  processor.
 
+config MSM_SMD_7500
+	default n
+	bool "MSM750x SMD support"
+	depends on MSM_SMD
+	help
+	  Some CDMA devices (e.g., MSM7501A) require special handling
+	  of SMD channels 0 and 1.  Say Y here to enable that support
+
 config MSM_ONCRPCROUTER
 	depends on MSM_SMD
 	default y
