don't use blackstone config as default

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -95,7 +95,7 @@ config MACH_HTCDIAMOND_CDMA
 
 config MACH_HTCBLACKSTONE
         depends on ARCH_MSM
-        default y
+        default n
         bool "HTC Blackstone cellphone (aka HTC Touch HD)"
         help
           Support for the HTC Blackstone cellphone
