* Common pwrsink setup module

--- a/arch/arm/configs/htc_msm_android_defconfig
+++ b/arch/arm/configs/htc_msm_android_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.27
-# Sun Mar  7 14:32:32 2010
+# Tue Mar  9 17:16:19 2010
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -214,7 +214,7 @@ CONFIG_HTC_HEADSET=y
 CONFIG_MSM_BATTCHG=y
 # CONFIG_TROUT_BATTCHG is not set
 CONFIG_MSM_SMEM_BATTCHG=y
-# CONFIG_HTC_PWRSINK is not set
+CONFIG_HTC_PWRSINK=y
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
 CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
