Disable SYSFS_DEPRECATED, enables Android headset detection
h2w state detection doesn't work unless SYSFS_DEPRECATED is disabled

--- a/arch/arm/configs/htc_msm_android_defconfig
+++ b/arch/arm/configs/htc_msm_android_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.27
-# Tue Mar  9 17:16:19 2010
+# Sat Mar 13 14:27:30 2010
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -52,8 +52,7 @@ CONFIG_GROUP_SCHED=y
 # CONFIG_RT_GROUP_SCHED is not set
 CONFIG_USER_SCHED=y
 # CONFIG_CGROUP_SCHED is not set
-CONFIG_SYSFS_DEPRECATED=y
-CONFIG_SYSFS_DEPRECATED_V2=y
+# CONFIG_SYSFS_DEPRECATED_V2 is not set
 # CONFIG_RELAY is not set
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
